# fitcrave-datascience

./: .env.example  .gitignore  Dockerfile  README.md  analysis_report.txt  analyze_db.py  analyze_db2.py  db_analysis.txt  pyproject.toml  requirements.txt  test_db.py  test_logs.txt  test_workout_engine.py  verify_atlas.py
app/: __init__.py  config.py  database.py  main.py
app/engines/: __init__.py
app/engines/coaching/: __init__.py  daily_briefing.py  notifier.py  reactive_coach.py  weekly_review.py
app/engines/nutrition/: __init__.py  adaptive_targets.py  food_search.py  grocery_list.py  macro_calculator.py  meal_logger.py  meal_planner.py  meal_snap.py  mess_menu_analyzer.py  mess_menu_editor.py  router.py
app/engines/workout/: __init__.py  exercise_db.py  plan_generator.py  progressive_overload.py  progressive_overload_calculator.py  tracker.py  youtube_enricher.py
app/models/: __init__.py  coaching.py  meal.py  user.py  workout.py
app/orchestrator/: __init__.py  agent.py  context_manager.py  firestore_listener.py  intent_classifier.py
app/utils/: __init__.py  llm_client.py  prompts.py  validators.py
documentation/: frontend_backend_mapping.md  phase_3_workout_engine_implementation.md  phase_3_workout_engine_plan.md  youtube_video_integration_plan.md
graph/: graph_builder.py  state.py
graph/nodes/: preprocessing.py  response.py  routing.py
graph/nodes/meal_plan/: __init__.py  (+1 more)
tests/: __init__.py  test_exercise_db.py  test_macro_calculator.py  test_plan_generator.py  test_progressive_overload.py
utils/: __init__.py  db.py  logger.py
(+4 files in other folders)
