[project]
name = "fitcrave-datascience"
version = "0.1.0"
description = "FitCrave AI Backend — Nutrition, Workout, and Coaching engines powered by Gemini"
requires-python = ">=3.11"
readme = "README.md"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
