[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fitcrave-api"
version = "1.0.0"
description = "Backend API for the Nutrition and Fitness AI Agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "langgraph",
    "langchain",
    "pydantic",
    "python-dotenv",
    "pymongo",
    "langchain-google-genai"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx"
]

[project.scripts]
start = "app.main:app"
